bug 458950 - updater doesn't build for windows CE r=vlad,bsmedberg