toolkit/mozapps/update/src/updater/archivereader.cpp
@@ -48,6 +48,10 @@
 # include <io.h>
 #endif
 
+#ifdef WINCE
+#include "updater_wince.h"
+#endif
+
 int
 #ifdef XP_WIN
 ArchiveReader::Open(const WCHAR *path)
@@ -86,14 +90,14 @@ ArchiveReader::ExtractFile(const char *name, const char *dest)
     return READ_ERROR;
 
 #ifdef XP_WIN
-  int fd = _open(dest, _O_BINARY|_O_CREAT|_O_TRUNC|_O_WRONLY, item->flags);
+  FILE* fp = fopen(dest, "wb+");
 #else
   int fd = creat(dest, item->flags);
-#endif
   if (fd == -1)
     return WRITE_ERROR;
 
   FILE *fp = fdopen(fd, "wb");
+#endif
   if (!fp)
     return WRITE_ERROR;
 
